--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,13 +22,18 @@ import(splines)
 importFrom(ggplot2,geom_point)
 importFrom(grDevices,rgb)
 importFrom(grDevices,trans3d)
+importFrom(graphics,.filled.contour)
 importFrom(graphics,abline)
+importFrom(graphics,axTicks)
+importFrom(graphics,axis)
 importFrom(graphics,contour)
 importFrom(graphics,grid)
 importFrom(graphics,lines)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,persp)
+importFrom(graphics,plot.new)
+importFrom(graphics,plot.window)
 importFrom(graphics,points)
 importFrom(graphics,segments)
 importFrom(gridExtra,grid.arrange)
