--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ cache: packages
 
 notifications:
   email:
+  	recipients:
+  	  - alerts@jumpingrivers.support
     on_success: change
     on_failure: change
 
@@ -11,10 +13,10 @@ r_packages:
 
 before_install:
   - tlmgr install fancyvrb units
-  - Rscript -e 'install.packages("nlme", lib="/home/travis/R-bin/lib/R/library/")'
 
-#before_script:
-#  - make
+before_script:
+  - wget https://raw.githubusercontent.com/jr-packages/drat/master/test_deploy.sh
+  - bash test_deploy.sh
 
 after_success:
   - wget https://raw.githubusercontent.com/jr-packages/drat/master/deploy.sh
