--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: jrPredictive
-Title: Predictive Analytics by Jumping Rivers
-Version: 1.1.10
+Title: Jumping Rivers: Predictive Analytics
+Version: 1.2.0
 Authors@R: 
     c(person(given = "Jamie",
              family = "Owen",
