--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: jrPredictive
-Title: Predictive Analytics by Jumping Rivers
-Version: 1.1.11
+Title: Jumping Rivers: Predictive Analytics
+Version: 1.2.0
 Authors@R: 
     c(person(given = "Jamie",
              family = "Owen",
@@ -29,7 +29,6 @@ Imports:
     gridExtra,
     ipred,
     ISLR,
-    jrData,
     kernlab,
     lars,
     mlbench,
@@ -52,8 +51,6 @@ Suggests:
     tufte
 VignetteBuilder: 
     knitr
-Remotes: 
-    jr-packages/jrData
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
